<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="clickHandler"
            type="com.base.mvvm.feature.login.LoginHandler" />

        <variable
            name="userBean"
            type="com.base.mvvm.bean.UserBean" />

        <variable
            name="baseBean"
            type="com.base.mvvm.bean.BaseBean"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvUserWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:text='@{baseBean != null ? baseBean.result + @string/user_welcome_hint : ""}'
                />
        </RelativeLayout>

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="用户名"
            android:text="@={userBean.userName}" />

        <EditText
            android:id="@+id/edtUserPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="密码"
            android:password="true"
            android:text="@={userBean.userPwd}" />

        <CheckBox
            android:id="@+id/cbIsRecordPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:checked="@={userBean.isRecordPwd}"
            android:text="记住密码" />

        <Button
            android:id="@+id/btnLoginDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="@{clickHandler::loginDo}"
            android:tag="登陆按钮"
            android:text="登陆" />

    </LinearLayout>
</layout>
